--- a/Resnet50_project.ipynb
+++ b/Resnet50_project.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "name": "Resnet50_project.ipynb"
+      "name": "Resnet50_project.ipynb",
+      "authorship_tag": "ABX9TyODhtrfsUSJPPzVYdYxpIGS",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Biru04an/Flower_classification_Resnet50/blob/main/Resnet50_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
